--- a/src/components/compStyles/AppComponent.css
+++ b/src/components/compStyles/AppComponent.css
@@ -35,7 +35,7 @@ aside h2{
     text-align: center;
 }
 
-section button{
+#homeButton{
     color: #FEF9F8;
     background-color:#EF9273;
     padding: 15px;
@@ -44,4 +44,69 @@ section button{
     font-size: large;
     border-radius: 10px;
     border-style: none;
+    transition: transform 250ms;
 }
+
+#homeButton:hover{
+    cursor: pointer;
+    transform: translateY(-10px);
+
+}
+
+
+
+
+  #slider{
+    overflow: hidden;
+  }
+  
+  #slider figure{
+    position:relative;
+    margin:0;
+    left:0;
+    animation: 20s slider infinite;
+    width: 500%;
+    
+  }
+  
+  #slider figure img {
+    width: 20%;
+    float: left;
+  }
+  
+  @keyframes slider{
+    0%{
+      left: 0;
+    }
+    20%{
+      left: 0;
+    }
+    25%{
+      left: -100%;
+    }
+    45%{
+      left: -100%;
+    }
+    50%{
+      left: -200%;
+    }
+    70%{
+      left: -200%;
+    }
+    75%{
+      left: -300%;
+    }
+    95%{
+      left: -300%;
+    }
+    100%{
+      left: -400%;
+    }
+  }
+
+  .wrapper{
+      padding-top: 5%;
+      display: grid;
+      grid-template-columns: 20% 60% 20%;
+      padding-bottom: 5%;
+  }
