--- a/src/components/compStyles/Navbar.css
+++ b/src/components/compStyles/Navbar.css
@@ -2,13 +2,6 @@
     font-family: 'Poppins', sans-serif;
 }
 
-.nav ul{
-    list-style-type: none;
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-  }
-
 .nav li{
     display: flex;
     list-style: none;
@@ -19,6 +12,7 @@
 .nav li a{
     text-decoration: none;
     color: #0D0D0D;
+    font-size: larger;
 }
 
 .nav, ul, li, a{
@@ -26,6 +20,13 @@
 }
 
 .nav{
-    display: flex;
+    display: grid;
+    grid-template-columns: 41% 30% 13% 10%;
 }
 
+
+
+#logo{
+    width: 100px;
+    height: 100px;
+}
