--- a/client/src/components/compStyles/Products.css
+++ b/client/src/components/compStyles/Products.css
@@ -3,7 +3,7 @@
 	padding-bottom: 11%;
 }
 
-.prodBod input button {
+.prodBod input {
 	font-size: larger;
 	border-radius: 10px;
 	border-style: solid;
@@ -40,12 +40,24 @@ h1 {
 	box-shadow: 10px 10px #f7d0b3;
 }
 
-.products {
+.productInfo {
 	display: grid;
-	grid-template-columns: 33% 33% 33%;
-	padding-top: 5%;
+	grid-template-columns: 20% 20% 20%;
 }
 
-.products div {
+.productInfo div {
 	text-align: center;
+}
+
+.productInfo img {
+	width: 50px;
+	height: 50px;
+}
+
+.productInfo P {
+	width: 40%;
+}
+
+.productInfo h5 {
+	font-size: larger;
 }
