--- a/client/src/components/compStyles/Footer.css
+++ b/client/src/components/compStyles/Footer.css
@@ -1,71 +1,72 @@
-
-  footer{
-    bottom:0  
-  }
-  .place, .phone, .email{
-      text-align: center;
-  }
-  .content1{
+footer {
+	bottom: 0;
+}
+.place,
+.phone,
+.email {
+	text-align: center;
+}
+.content1 {
 	margin: 130px auto;
 	text-align: center;
 	padding: 0 20px;
-  }
-  .content1 .text{
+}
+.content1 .text {
 	font-size: 2.5rem;
 	font-weight: 600;
 	color: #202020;
-  }
-  .content1 .p{
+}
+.content1 .p {
 	font-size: 2.1875rem;
 	font-weight: 600;
 	color: #202020;
-  }
-  footer{
+}
+footer {
 	bottom: 0px;
 	width: 100%;
-	background: #EF9273;
-  }
-  .main-content{
+	background: #ef9273;
+}
+.main-content {
 	display: flex;
-  }
-  .main-content .box{
+}
+.main-content .box {
 	flex-basis: 50%;
 	padding: 10px 20px;
-  }
-  .box h2{
+}
+.box h2 {
 	font-size: 1.125rem;
 	font-weight: 600;
 	text-transform: uppercase;
-  }
-  .box .content{
+}
+.box .content {
 	margin: 20px 0 0 0;
 	position: relative;
-  }
-  .box .content:before{
+}
+.box .content:before {
 	position: absolute;
 	content: '';
 	top: -10px;
 	height: 2px;
 	width: 100%;
-	background: #1a1a1a;
-  }
-  .box .content:after{
+	background: #fef9f8;
+}
+.box .content:after {
 	position: absolute;
 	content: '';
 	height: 2px;
 	width: 15%;
-	background: #f12020;
+	background: #fef9f8;
 	top: -10px;
-  }
+}
 
-  .left h2{
-      text-align: center;
-  }
-  .left .content p{
+.left h2 {
 	text-align: center;
-  }
+}
+.left .content p {
+	text-align: center;
+}
 
-  .center .content .fas{
+.center .content .fas {
 	font-size: 1.4375rem;
 	background: #1a1a1a;
 	height: 45px;
@@ -75,68 +76,66 @@
 	border-radius: 50%;
 	transition: 0.3s;
 	cursor: pointer;
-  }
-  .center .content .fas:hover{
+}
+.center .content .fas:hover {
 	background: blue;
-  }
-  .center .content .text{
+}
+.center .content .text {
 	font-size: 1.0625rem;
 	font-weight: 500;
 	padding-left: 10px;
-  }
-  .center .content .phone{
-	margin: 15px 0;
-  }
-
-  
-.center h2{
-    text-align: center;
-    padding-left: 1%;
 }
-  
-  .bottom center{
+.center .content .phone {
+	margin: 15px 0;
+}
+
+.center h2 {
+	text-align: center;
+	padding-left: 1%;
+}
+
+.bottom center {
 	padding: 5px;
 	font-size: 0.9375rem;
-	background: #EF9273;
-  }
-  .bottom center span{
+	background: #ef9273;
+}
+.bottom center span {
 	color: black;
-  }
-  .bottom center a{
+}
+.bottom center a {
 	color: black;
 	text-decoration: none;
-  }
-  .bottom center a:hover{
+}
+.bottom center a:hover {
 	text-decoration: underline;
-  }
+}
 
-  .social ul{
-      background-color:#EF9273;
-      list-style: none;
-      display: flex;
-  }
+.social ul {
+	background-color: #ef9273;
+	list-style: none;
+	display: flex;
+}
 
-  .social a{
-      background-color: #EF9273;
-      
-  }
+.social a {
+	background-color: #ef9273;
+}
 
-  .social li{
-      background-color:#EF9273;
-      padding: 10px;
-  }
+.social li {
+	background-color: #ef9273;
+	padding: 10px;
+}
 
-  .social img{
-      height: 30px;
-      width: 30px;
-      border-radius: 11px;
-  }
+.social img {
+	height: 30px;
+	width: 30px;
+	border-radius: 11px;
+}
 
-  .social img:hover{
-      background-color: #FEF9F8;
-  }
+.social img:hover {
+	background-color: #fef9f8;
+}
 
-  .socialSpacing{
-      display: grid;
-      grid-template-columns: 25% 60% 15%;
-  }
+.socialSpacing {
+	display: grid;
+	grid-template-columns: 25% 60% 15%;
+}
