--- a/client/src/components/compStyles/Contact.css
+++ b/client/src/components/compStyles/Contact.css
@@ -1,72 +1,133 @@
-.contactForm{
-    font-size:x-large;
+.contactForm {
+	font-size: x-large;
 }
-.form2 textarea{
-    font-size: larger;
-    border-radius: 10px;
-    border-style:solid;
-    box-shadow: 10px 10px #F7D0B3;
-    background-color: white;
-}
-
-.form2 input{
-    font-size: larger;
-    border-radius: 10px;
-    border-style:solid;
-    box-shadow: 10px 10px #F7D0B3;
-    background-color: blue;
-
+.form2 textarea {
+	font-size: larger;
+	border-radius: 10px;
+	border-style: solid;
+	box-shadow: 10px 10px #f7d0b3;
+	background-color: white;
 }
 
-.form1 input{
-    font-size: larger;
-    border-radius: 10px;
-    border-style:solid;
-    box-shadow: 10px 10px #F7D0B3;
-    width: 850px;
-
+.form2 input {
+	font-size: larger;
+	border-radius: 10px;
+	border-style: solid;
+	box-shadow: 10px 10px #f7d0b3;
 }
 
-
-section label{
-    text-align: left;
+.form1 input {
+	font-size: larger;
+	border-radius: 10px;
+	border-style: solid;
+	box-shadow: 10px 10px #f7d0b3;
+	width: 850px;
 }
 
-#conH1{
-    text-align: center;
-    padding-bottom: 2%;
+section label {
+	text-align: left;
 }
 
-.conFormPro{
-    display: grid;
-    grid-template-columns: 20% 70% 10%;
+#conH1 {
+	text-align: center;
+	padding-bottom: 2%;
 }
 
-.conFormPro p{
-    color: red;
+.conFormPro {
+	display: grid;
+	grid-template-columns: 20% 70% 10%;
 }
 
-.buttonSub{
-    display: grid;
-    grid-template-columns: 32% 20% 48%;
+.conFormPro p {
+	color: red;
 }
 
-.buttonSub input{
-    color: #FEF9F8;
-    background-color:#EF9273;
-    padding: 15px;
-    padding-left: 70px;
-    padding-right: 70px;
-    font-size: large;
-    border-radius: 10px;
-    border-style: none;
+.buttonSub {
+	display: grid;
+	grid-template-columns: 32% 20% 48%;
 }
 
-.buttonSub input:hover{
-    cursor: pointer;
+.buttonSub input {
+	color: #fef9f8;
+	background-color: #ef9273;
+	padding: 15px;
+	padding-left: 70px;
+	padding-right: 70px;
+	font-size: large;
+	border-radius: 10px;
+	border-style: none;
 }
 
-.uiMessage{
-    text-align: center;
-    padding-right: 17%;
+.buttonSub input:hover {
+	cursor: pointer;
+}
+
+.uiMessage {
+	text-align: center;
+	padding-right: 17%;
+}
+
+@media screen and (max-width: 480px) {
+	.contactForm {
+		font-size: medium;
+	}
+	.form1 input {
+		width: 350px;
+		margin-bottom: 2%;
+	}
+
+	.form1 label {
+		width: 300px;
+	}
+
+	.form2 textarea {
+		width: 350px;
+	}
+
+	.buttonSub input {
+		font-size: large;
+		border-radius: 10px;
+		border-style: none;
+		padding: 10px;
+	}
+	.buttonSub {
+		display: flex;
+		justify-content: center;
+	}
+
+	.contactForm p {
+		width: 300px;
+	}
+	.conFormPro {
+		grid-template-columns: 100%;
+	}
+
+	.uiMessage {
+		text-align: center;
+		padding: 0%;
+	}
+}
+
+@media screen and (max-width: 775px) and (min-width: 481px) {
+	.form1 input {
+		width: 650px;
+	}
+	.conFormPro {
+		grid-template-columns: 100%;
+		padding-left: 5%;
+	}
+	.form2 textarea {
+		width: 650px;
+	}
+
+	.buttonSub input {
+		border-radius: 10px;
+		padding: 20px;
+	}
+
+	.buttonSub {
+		display: flex;
+		justify-content: center;
+		padding-right: 4%;
+	}
 }
