--- a/client/src/components/compStyles/Footer.css
+++ b/client/src/components/compStyles/Footer.css
@@ -139,3 +139,31 @@ footer {
 	display: grid;
 	grid-template-columns: 25% 60% 15%;
 }
+
+@media screen and (max-width: 480px) {
+	footer {
+		position: relative;
+		bottom: 0px;
+	}
+	.main-content {
+		flex-wrap: wrap;
+		flex-direction: column;
+	}
+	.main-content .box {
+		margin: 5px 0;
+	}
+	.social li {
+		text-align: center;
+	}
+
+	.social {
+		position: relative;
+	}
+
+	.padding {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 775px) {
+}
